Added a new module converting YAML files into JSONL

--- a/llm_kb_gen/few-shots-new.yaml
+++ b/llm_kb_gen/few-shots-new.yaml
@@ -3,7 +3,7 @@ few_shots:
     role: 'system'
     content: "Given a robotic problem, produce knowledge base in Prolog format"
   files: 
-    - "few-shots/general.yaml"
-    - "few-shots/blocks_case.yaml"
-    - "few-shots/medical_case.yaml"
-    - "few-shots/service_case.yaml"
+    - "few-shots_kb/general.yaml"
+    - "few-shots_kb/blocks_case.yaml"
+    - "few-shots_kb/medical_case.yaml"
+    - "few-shots_kb/service_case.yaml"
