--- a/llm_kb_gen/few-shots_kb/blocks_case.yaml
+++ b/llm_kb_gen/few-shots_kb/blocks_case.yaml
@@ -1,4 +1,4 @@
-few_shots:
+entries:
   convo:
     ############################################################################
     ###############################     0     ##################################
