System fingerprint parameter added to the config files

--- a/llm_kb_gen/conf/gpt35-turbo.yaml
+++ b/llm_kb_gen/conf/gpt35-turbo.yaml
@@ -2,3 +2,4 @@ LLM_VERSION : "LLMPlanning35"
 API_KEY_NAME : "OPENAI_API_KEY"
 ENDPOINT : "https://disi-logic-programming.openai.azure.com/"
 API_VERSION : "2023-05-15"
+SYSTEM_FINGERPRINT : "None"
