--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -r llm_kb_gen/requirements.txt
 -r llm_ll_gen/requirements.txt
+-r LLM/requirements.txt
 -r python_interface/requirements.txt
 -r server/requirements.txt
