--- a/llm_kb_gen/few-shots_feedback/semantic_errors.yaml
+++ b/llm_kb_gen/few-shots_feedback/semantic_errors.yaml
@@ -1,22 +1,16 @@
 entries:
   system_msg:
     role: 'system'
-    content: "Given Prolog Knowledge Base, correct errors which exist in the code"
+    content: "Given Prolog Knowledge Base, correct semantic errors in the code"
   convo:
     ############################################################################                                      
-    ###############################     0     ##################################              Mismatch: start_action => Effects (gripping) - end_action => ValidConditions
-    ############################################################################
+    ###############################     0     ##################################              
+    ############################################################################  Wrong number of arguments in the predicate
     0:
       Q: 
         role: 'user'
         content: |
         
-          We describe each state by a list of predicates, which define the position of the blocks and the status of the agents. 
-          For example, ontable(Block, X, Y) describes the fact that a block is on the table at coordinates (X, Y).
-          available(Agent) states that an agent is available to be used.
-          gripped(Agent, Block) states that a block is gripped by an agent.
-          gripped(_, Block) states that a block is gripped by any agent.
-
           In our knowledge base, every action is splitted into 'start' and 'end' actions for both durative and instantaneous actions.
           Our knowledge base is composed of predicates to describe the states, and Prolog rules that describe the actions leveraging the following structure:    
           
@@ -29,121 +23,127 @@ entries:
             [Effects]
           ).
 
-          The variable Name defines the name of the action and its argument, e.g., for the action corresponding to the gripping of an agent on a block, we use Name=grip(Agent,Block).
           The six variables that follow are lists of conditions that must be checked before deciding whether to add the action or not:
-          - ValidConditions contains conditions that should be verified in the current state;
-          - InvalidConditions contains conditions that must not be verified in the current state;
-          - ValidConditionsAtEnd contains conditions that must not be verified in the goal;
-          - ConditionOnKB contains conditions that must be verified on the knowledge base before deciding on the action.
-          - Effects contains a list of predicates on how to modify the current state in a new state. Each predicate is in the form of either add(P(...)), which adds P(...) to the state, or del(P(...)), which looks for P(...) in the current state and removes it.
+          - `Name` defines the name of the action and its argument, e.g., for the action corresponding to the gripping of an agent on a block, we use Name=grip(Agent,Block). 
+          - `ValidConditions` contains conditions that should be verified in the current state;
+          - `InvalidConditions` contains conditions that must not be verified in the current state;
+          - `ValidConditionsAtEnd` contains conditions that must not be verified in the goal;
+          - `ConditionOnKB` contains conditions that must be verified on the knowledge base before deciding on the action.
+          - `Effects` contains a list of predicates on how to modify the current state in a new state. Each predicate is in the form of either `add(P(...))`, which adds P(...) to the state, or `del(P(...))`, which looks for P(...) in the current state and removes it.
 
-          The predicates added in the 'Effects' of a start action must be present in the 'ValidConditions' of the corresponding end action. An example is the following one:
-          ```prolog
-          % The robot starts to do something
-          action(
-            start_action(Agent, Block),
-            [ValidCondition_1(Agent), ValidCondition_2(Block)],
-            [InvalidCondition_1(Agent)],
-            [],
-            [],
-            [add(Effect_1(Agent))]
+          ```Prolog
+          :-dynamic block/1.
+          :-dynamic agent/1.
+          :-dynamic arch/1.
+          :-dynamic pos/4.
+
+          block(block1).
+          block(block2).
+
+          agent(a1).
+          agent(a2).
+
+          arch(arch1).
+
+          posi(_, X, Y, Z) :- 
+            pos(_, X1, Y1, Z1), 
+            pos(_, X2, Y2, _),
+            X is (X1 + X2)/2, 
+            Y is (Y1 + Y2)/2,
+            Z is Z1.
+
+          action(build_pillar_start(A, Pos, Block1),
+            [av(A), free(Block1)],
+            [pillar(Pos, _), pillaring(_, Pos, _)],
+            [pillar(Pos, Block1)],
+            [block(Block1), agent(A), pos(Pos,_,_,_)],
+            [del(av(A)), del(free(Block1)), add(pillaring(A, Pos, Block1))]
           ).
-          % The robot finalize doing something
-          action(
-            end_action(Agent, Block),
-            [Effect_1(Agent)],
-            [InvalidCondition_2(Agent)],
+          action(build_pillar_end(A, Pos, Block1),
+            [pillaring(A, Pos, Block1)],
+            [pillar(Pos, _)],
             [],
             [],
-            [add(Effect_2(Agent))]
+            [del(pillaring(A, Pos, Block1)), add(av(A)), add(pillar(Pos, Block1))]
           ).
-          ```
-
-          The 'Effect_1(Agent)' effect occurs as a result of the 'start_action'. This is one of the conditions which must be present in the 'ValidConditions' to take the 'end_action'.
-
-          The list ValidConditionsAtEnd checks if a condition from the goal has already been achieved and avoids actions which may make one of the contained conditions not to hold.
-          ConditionOnKB is a list used to force the Prolog interpreter to ground the variables of the action to some values.
-
-          In particular, the knowledge base is composed of predicates: 
-          - pos(X,Y), which indicates positions that may be used by the agents to temporarily store blocks;
-          - The predicates inside the goal state.
-          
-          The reason for adding the goal state to the knowledge base is to avoid adding trivial and useless actions.
-          Indeed, the search in Prolog is not guided and if we were not to match the goal when choosing an action, the search would be completely unguided and the program may add useless actions such as the movement of a block in the same position.
-          To query for a solution, we provide the initial and final states as input parameters to the go function. This function serves as a convenient wrapper for the plan function, which is responsible for the actual plan-finding process.
-                          
-          Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y) in accrodance with the information provided above?
-
-          Code:
-          ```prolog
-          %  /# of parameters for given predicate
-          :- dynamic ontable/3.
-          :- dynamic available/1.
-          :- dynamic clear/1.  
-          :- dynamic gripping/2.
-          :- dynamic gripped/2.
-          :- discontiguous action/6.    
-
-          % The robot starts to grip the block
-          action(
-          grip_ontable_start(Agent, Block), 
-          [ontable(Block, X, Y), available(Agent), clear(Block)],
-          [gripped(_, Block), gripping(_, Block)],
-          [ontable(Block, X, Y)],
-          [],
-          [del(available(Agent))]
-          ).                           
-
-          % The robot finalize gripping the block
-          action(grip_end(Agent, Block),
-          [gripping(Agent, Block)],
-          [],
-          [],
-          [],
-          [del(clear(Block)), del(gripping(Agent, Block)), add(gripped(Agent, Block))]
+          action(place_arch_start(A, Pos1, Pos2, Arch),
+            [av(A), pillar(Pos1, _), pillar(Pos2, _), free(Arch)],
+            [placing_arch(_, Pos1, Pos2, _), placed_arch(Pos1, Pos2, _)],
+            [placed_arch(Pos1, Pos2, Arch)],
+            [arch(Arch), agent(A), pos(Pos1,_,_,_), pos(Pos2,_,_,_), Pos1\=Pos2],
+            [del(av(A)), del(free(Arch)), add(placing_arch(A, Pos1, Pos2, Arch))]
+          ).
+          action(place_arch_end(A, Pos1, Pos2, Arch),
+            [placing_arch(A, Pos1, Pos2, Arch)],
+            [arch(_, Pos1, Pos2)],
+            [],
+            [],
+            [del(placing_arch(A, Pos1, Pos2, Arch)),add(arch(Pos1, Pos2, Arch)), add(av(A))]
           ).
           ```
 
-          Error Type: Mismatch between the Effects of the start action and the ValidConditions of the end action
-                          
-          Can you correct the error found in the code?
+          The above Prolog code represent the knowledge base involving the steps in a process of building a pillar from blocks.
+          However, the number of arguments in the `pos` predicate in the `ConditionsOnKB` of the `build_pillar_start` action is wrong.
+          The `pos` predicate takes 4 arguments. The error can be solved by adding a placeholder `_` as the 4th argument.
+          Thus, it should be `[block(Block1), agent(A), pos(Pos,_,_,_)],` instead of `[block(Block1), agent(A), pos(Pos,_,_)],`.
+          Can you correct the above Prolog code accordingly?
 
       
       A: 
         role: 'assistant'
         content: |
         
-          Sure, here is the Prolog code:
-          ```prolog
-          %  /# of parameters for given predicate
-          :- dynamic ontable/3.
-          :- dynamic available/1.
-          :- dynamic clear/1.  
-          :- dynamic gripping/2.
-          :- dynamic gripped/2.
-          :- discontiguous action/6.    
+          Sure, here's the corrected Prolog code with the appropriate number of arguments in the `pos` predicate in the `ConditionsOnKB` of the `build_pillar_start` action:
+          ```Prolog
+          :-dynamic block/1.
+          :-dynamic agent/1.
+          :-dynamic arch/1.
+          :-dynamic pos/4.
 
-          % The robot starts to grip the block
-          action(
-          grip_ontable_start(Agent, Block), 
-          [ontable(Block, X, Y), available(Agent), clear(Block)],
-          [gripped(_, Block), gripping(_, Block)],
-          [ontable(Block, X, Y)],
-          [],
-          [del(available(Agent)), add(gripping(Agent, Block))]
-          ).                           
+          block(block1).
+          block(block2).
 
-          % The robot finalize gripping the block
-          action(grip_end(Agent, Block),
-          [gripping(Agent, Block)],
-          [],
-          [],
-          [],
-          [del(clear(Block)), del(gripping(Agent, Block)), add(gripped(Agent, Block))]
+          agent(a1).
+          agent(a2).
+
+          arch(arch1).
+
+          posi(_, X, Y, Z) :- 
+            pos(_, X1, Y1, Z1), 
+            pos(_, X2, Y2, _),
+            X is (X1 + X2)/2, 
+            Y is (Y1 + Y2)/2,
+            Z is Z1.
+
+          action(build_pillar_start(A, Pos, Block1),
+            [av(A), free(Block1)],
+            [pillar(Pos, _), pillaring(_, Pos, _)],
+            [pillar(Pos, Block1)],
+            [block(Block1), agent(A), pos(Pos,_,_,_)],
+            [del(av(A)), del(free(Block1)), add(pillaring(A, Pos, Block1))]
+          ).
+          action(build_pillar_end(A, Pos, Block1),
+            [pillaring(A, Pos, Block1)],
+            [pillar(Pos, _)],
+            [],
+            [],
+            [del(pillaring(A, Pos, Block1)), add(av(A)), add(pillar(Pos, Block1))]
+          ).
+          action(place_arch_start(A, Pos1, Pos2, Arch),
+            [av(A), pillar(Pos1, _), pillar(Pos2, _), free(Arch)],
+            [placing_arch(_, Pos1, Pos2, _), placed_arch(Pos1, Pos2, _)],
+            [placed_arch(Pos1, Pos2, Arch)],
+            [arch(Arch), agent(A), pos(Pos1,_,_,_), pos(Pos2,_,_,_), Pos1\=Pos2],
+            [del(av(A)), del(free(Arch)), add(placing_arch(A, Pos1, Pos2, Arch))]
+          ).
+          action(place_arch_end(A, Pos1, Pos2, Arch),
+            [placing_arch(A, Pos1, Pos2, Arch)],
+            [arch(_, Pos1, Pos2)],
+            [],
+            [],
+            [del(placing_arch(A, Pos1, Pos2, Arch)),add(arch(Pos1, Pos2, Arch)), add(av(A))]
           ).
           ```
-
-          Explanation: The error can be fixed by adding '(gripping(Agent, Block)' into the 'Effects' of the 'grip_ontable_start' action.
 
     ############################################################################
     ###############################     1     ##################################             
@@ -156,7 +156,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y) in accrodance with the information provided above?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1.
@@ -194,7 +194,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1.
@@ -235,7 +235,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y) in accrodance with the information provided above?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1. 
@@ -274,7 +274,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1. 
@@ -318,7 +318,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -354,7 +354,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -397,7 +397,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -434,7 +434,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -477,7 +477,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic full/1.
@@ -514,7 +514,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1.
@@ -557,7 +557,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1.
@@ -595,7 +595,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic at/2.
           :- dynamic holding/1.
@@ -638,7 +638,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -677,7 +677,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -720,7 +720,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -759,7 +759,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -802,7 +802,7 @@ entries:
           Query: Can you generate a prolog code including a set of actions in order for an agent to grip a block on the table at coordinate(X,Y)?
 
           Code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
@@ -840,7 +840,7 @@ entries:
         content: |
         
           Sure, here is the Prolog code:
-          ```prolog
+          ```Prolog
           %  /# of parameters for given predicate
           :- dynamic ontable/3.
           :- dynamic available/1.
