--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+output/
+tmp*txt
+package-lock.json
